Further Hugo adjustments
Fixed linking between index and faq page
Updated thank-you and prelaunch pages to md for hugo rendering
Changed filesystem organization per Hugo specification

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,5 @@
+        
+
         <div class="spaceBottom2"></div>
         <div class="footer">
 
@@ -5,7 +7,8 @@
             <img class="footerLogo" src={{ "/img/vlogo.png" | relURL }}><br>  
             </div>
             
-            <a href='' class="footerLink">| FAQ + CONTACT |</a>
+            <!-- <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a> -->
+            <a class="footerLink" href={{ "/frequently-asked-questions" | relURL }}>| FAQ + CONTACT |</a>
             <div class="divider">
                 <div class="social-footer">
                     <a href="http://www.facebook.com/vibeltd"><img class="fb2" src={{ "/img/vfb.png" | relURL }}></a>
