--- a/layouts/partials/head2.html
+++ b/layouts/partials/head2.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="{{ .Site.Params.meta.description }}" />
 	<meta name="keywords" content="{{ .Site.Params.meta.keywords }}" />
 
-	<link rel="stylesheet" href={{ "/css/cssv.css" | relURL }} />
-	<link rel="stylesheet" href={{ "/css/cssvr.css" | relURL }} />
+	<link rel="stylesheet" href={{ "/css/cssv2.css" | relURL }} />
+	<link rel="stylesheet" href={{ "/css/cssvr2.css" | relURL }} />
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
