--- a/static/css/cssv2.css
+++ b/static/css/cssv2.css
@@ -24,33 +24,46 @@ body {
   padding:0;
   margin:0;
   -webkit-text-size-adjust:none;
+}
 
-
+.heroD{
+    width: 100%;
+    background-color: #f2f2f2;
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    width:100%;
+    text-align: center;
+    vertical-align: middle;
+    background-image: url(/images/vherobg.jpg);
+    background-size: cover;
+    background-size: cover;
+    margin-top: -214px;
+    padding-bottom: 125px;
+    z-index: 99999;
+    padding-top: 205px;
 }
 
 .headerTextD{
-font-size:48px;
-font-family: 'Open Sans Condensed', sans-serif;
-font-weight:700;
-letter-spacing:2px;
-
-padding-left:10%;
-padding-right:10%;
-
-margin: 0 auto;
-
+    font-size:48px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight:700;
+    letter-spacing:2px;
+    padding-left:10%;
+    padding-right:10%;
+    margin: 44px auto 0;
 }
 
 .introTextD{
-font-family: 'Open Sans', sans-serif;
-padding-left:20%;
-padding-right:20%;
-font-size:16px;
-letter-spacing:2px;
-font-weight:300;
-line-height:40px;
-margin-top:40px;
-
+    font-family: 'Open Sans', sans-serif;
+    padding-left:20%;
+    padding-right:20%;
+    font-size:16px;
+    letter-spacing:2px;
+    font-weight:300;
+    line-height:40px;
+    margin-top:40px;
+    text-decoration: none;
 }
 
 .introTextD2{
@@ -69,43 +82,24 @@ margin-top:40px;
 margin-top:12.5px;
 }
 
-.heroD{
-    width: 100%;
-    background-color: #f2f2f2;
-    background-repeat: repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-width:100%;
-    text-align: center;
-    vertical-align: middle;
-    background-image: url(/images/vherobg.jpg);
-    background-size: cover;
-    background-size: cover;
-    margin-top: -214px;
-
-    padding-bottom: 125px;
-    z-index: 99999;
-    padding-top: 205px;
-}
-
 .header {
     display: flex;
     justify-content: space-around;
     height: auto;
     width: 100%;
-  }
+}
   
-  .headerCol1 {
-      margin: 40px 0;
-  }
+.headerCol1 {
+    margin: 40px 0;
+}
   
-  .headerCol2 {
+.headerCol2 {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 40px 0;
-  }
+}
 
 .hero {
     width: 100%;
@@ -171,16 +165,6 @@ width:100%;
   
   .pin {
     height: 18.75px;
-}
-
-.arrow{
-width:23px;
-height:15px;
-position:absolute;
-bottom:30%;
-left: 0;
-  right: 0;
-  margin: 0 auto;
 }
 
 
@@ -517,16 +501,16 @@ font-size:25px;
 
 .accordionButton {	
 	margin-top:60px;
-width:225px;
-height:73px;
+    width:225px;
+    height:73px;
 	cursor: pointer;
-	}
+}
 	
 .accordionContent {	
 	width: 80%;
 	text-align:center;
 	margin:0 auto;
-	}
+}
 	
 	.startText{
 	
@@ -609,9 +593,9 @@ cursor:pointer;
 }
 
 .footerForm{
-width:100%;
-margin:0 auto;
-text-align:center;
+    width:100%;
+    margin:0 auto;
+    text-align:center;
 }
 
 
@@ -621,7 +605,6 @@ font-size:45px;
 font-family: 'Open Sans Condensed', sans-serif;
 font-weight:700;
 letter-spacing:2px;
-
 padding-left:10%;
 padding-right:10%;
 position:absolute;
