--- a/static/css/cssvr2.css
+++ b/static/css/cssvr2.css
@@ -397,11 +397,11 @@ margin-bottom:60px;
 
 
 
-.divider{
+/* .divider{
 display:inline;
 margin-left:20px;
 margin-right:20px;
-}
+} */
 
 a.footerLink:link{
 font-family: 'Open Sans', sans-serif;
