--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,8 +7,7 @@
             <img class="footerLogo" src={{ "/img/vlogo.png" | relURL }}><br>  
             </div>
             
-            <!-- <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a> -->
-            <a class="footerLink" href={{ "/frequently-asked-questions" | relURL }}>| FAQ + CONTACT |</a>
+            <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a>
             <div class="divider">
                 <div class="social-footer">
                     <a href="http://www.facebook.com/vibeltd"><img class="fb2" src={{ "/img/vfb.png" | relURL }}></a>
