--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 600, 700" rel="stylesheet">
 
-	<link rel="icon" type="image/png" sizes="16x16" src={{ "./favicon-16x16.png"}}>
+	<link rel="icon" type="image/png" sizes="16x16" src={{ "/img/favicon-16x16.png" | relURL }}>
 
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
