--- a/static/css/cssv2.css
+++ b/static/css/cssv2.css
@@ -35,7 +35,7 @@ body {
     width:100%;
     text-align: center;
     vertical-align: middle;
-    background-image: url(/images/vherobg.jpg);
+    background-image: url(/img/vherobg.jpg);
     background-size: cover;
     background-size: cover;
     margin-top: -214px;
@@ -110,7 +110,7 @@ margin-top:12.5px;
     width: 100vw;
     text-align: center;
     vertical-align: middle;
-    background-image: url(/images/7b880e96dcabd3985ce45402ac88de237c69078c/vherobg.jpg);
+    background-image: url(/img/vherobg.jpg);
     background-size: cover;
     margin-top: -214px
 }
@@ -193,7 +193,7 @@ text-align:left;
 padding-left:60px;
 padding-right:60px;
 padding-bottom:60px;
-background:url(/images/vbackground.jpg);
+background:url(/img/vbackground.jpg);
 background-position:right;
 background-repeat:no-repeat;
 background-size:contain;
@@ -244,7 +244,7 @@ background-color: rgba(255, 255, 255, 0.90);    display: inline-block;
     text-align:left;
     background-color:rgba(241, 241, 241, 0.95);
     border-right:14px solid #fff;
-    background-image:url(/images/vline.jpg);
+    background-image:url(/img/vline.jpg);
     background-position:bottom;
     background-repeat:repeat-x;
 }
@@ -261,7 +261,7 @@ border-right:7px solid #fff;
     vertical-align: top;
     text-align:left;
         background-color:rgba(241, 241, 241, 0.95);
-    background-image:url(/images/vline.jpg);
+    background-image:url(/img/vline.jpg);
     background-position:bottom;
     background-repeat:repeat-x;
 
@@ -278,7 +278,7 @@ border-right:7px solid #fff;
     text-align:left;
     border-left:14px solid #fff;
         background-color:rgba(241, 241, 241, 0.95);
-            background-image:url(/images/vline.jpg);
+            background-image:url(/img/vline.jpg);
     background-position:bottom;
     background-repeat:repeat-x;
 }
