--- a/static/css/cssv.css
+++ b/static/css/cssv.css
@@ -136,6 +136,43 @@ body {
     margin: 0 auto;
 }
 
+.heroD{
+    width: 100%;
+    background-color: #f2f2f2;
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    width:100%;
+    text-align: center;
+    vertical-align: middle;
+    background-image: url(/img/vherobg.jpg);
+    background-size: cover;
+    background-size: cover;
+    margin-top: -214px;
+    padding-bottom: 125px;
+    z-index: 99999;
+    padding-top: 247px;
+}
+
+.headerTextD{
+    font-size:45px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight:700;
+    letter-spacing:2px;
+    padding-left:10%;
+    padding-right:10%;
+}
+
+.introTextD{
+    font-family: 'Open Sans', sans-serif;
+    padding-left:20%;
+    padding-right:20%;
+    font-size:16px;
+    letter-spacing:2px;
+    font-weight:300;
+    line-height:40px;
+}
+
 #intro {
     width: 100%;
     padding-top: 90px;
@@ -150,7 +187,7 @@ body {
     font-size: 20px;
     letter-spacing: 2px;
     font-weight: 300;
-    line-height: 40px
+    line-height: 40px;
 }
 
 .blockMain {
