--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     </div>
     
     <div class="headerCol2">
-        <a href="https://blog.vibeltd.co/" class="blog">Vibe Blog</a><br>
+        <a href="https://blog.vibeltd.co/" class="blog">Vibe Blog Hi Hi</a><br>
         <div class="social-header">
             <a href="http://www.facebook.com/vibeltd"><img class="fb" src={{ "/img/vfb.png" | relURL }}></a>
             <a href="http://www.twitter.com/vibeltd"><img class="twitter" src={{ "/img/vtwitter.png" | relURL }}></a>
