--- a/layouts/partials/vibe.html
+++ b/layouts/partials/vibe.html
@@ -2,7 +2,7 @@
 		
 	<div class="introText">
 		Vibe is a tasting menu of premium cannabis, speciality coffee and craft chocolates. Each box is a collection of ingredients
-		for making moments in time.
+		for making moments in time. <br>
 		
 		<img class="accordionButton" src={{ "/img/vbutton.jpg" | relURL }}>
 	<div class="accordionContent">
