--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
             <div>
             <img class="footerLogo" src={{ "/img/vlogo.png" | relURL }}><br>  
             </div>
-            
+            <!-- <div data-netlify-identity-menu></div> -->
             <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a>
             <div class="divider">
                 <div class="social-footer">
@@ -15,8 +15,8 @@
                     <a href="http://www.instagram.com/vibeltd"><img class="insta2" src={{ "/img/vinsta.png" | relURL }}></a>
                     <a href="https://www.pinterest.com/vibeltd/"><img class="pin2" src={{ "/img/vpin.png" | relURL }}></a>
                 </div>
-                <div class="copyright">Copyright &copy{{ .Site.Copyright }}</div>
             </div>
+            <div class="copyright">Copyright &copy{{ .Site.Copyright }}</div>
         </div>
     </body>
 </html>
