--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta name="p:domain_verify" content="d3f33c2fef2e4e82bcfd395624327d38" />
 	<title>Vibe LTD - Chocolate, Coffee, and Cannabis Monthly Subscription</title>
-	
+
 	<meta name="description" content="{{ .Site.Params.meta.description }}" />
 	<meta name="keywords" content="{{ .Site.Params.meta.keywords }}" />
 
@@ -19,6 +20,8 @@
 	<link rel="icon" type="image/png" sizes="16x16" src={{ "/img/favicon-16x16.png" | relURL }}>
 
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+	<script defer type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 	<script>
 		$(document).ready(function () {
@@ -70,6 +73,36 @@
 			});
 		});
 	</script>
+
+	<!-- Facebook Pixel Code -->
+	<script>
+		! function (f, b, e, v, n, t, s) {
+			if (f.fbq) return;
+			n = f.fbq = function () {
+				n.callMethod ?
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+			};
+			if (!f._fbq) f._fbq = n;
+			n.push = n;
+			n.loaded = !0;
+			n.version = '2.0';
+			n.queue = [];
+			t = b.createElement(e);
+			t.async = !0;
+			t.src = v;
+			s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window,
+			document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '365893380475713'); // Insert your pixel ID here.
+		fbq('track', 'PageView');
+		fbq('track', 'Lead');
+	</script>
+	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"
+		/></noscript>
+	<!-- DO NOT MODIFY -->
+	<!-- End Facebook Pixel Code -->
+
 	<script type="text/javascript">
 		! function (e) {
 			if (!window.pintrk) {
@@ -99,4 +132,5 @@
 		/>
 	</noscript>
 </head>
+
 <body>
