--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -91,15 +91,15 @@ margin-left:0%;
 }
 
 
-.hero{
-width:100%;
-height:initial;
-padding-top:200px;
-padding-bottom:100px;
-text-align:center;
-background-color:#f1f1f1;
-margin-top:-184px;
-background-position:65% 50%;
+.hero {
+    width:100%;
+    height:initial;
+    padding-top:200px;
+    padding-bottom:100px;
+    text-align:center;
+    background-color:#f1f1f1;
+    margin-top: -220px;
+    background-position:65% 50%;
 }
 
 
@@ -362,16 +362,15 @@ line-height:30px;
 }
 
 .footerLogo{
-width:95px;
-height:95px;
-margin-bottom:60px;
+    width:95px;
+    height:95px;
 }
 
 
 .divider{
-display:inline;
-margin-left:20px;
-margin-right:20px;
+    display:inline;
+    margin-left:20px;
+    margin-right:20px;
 }
 
 a.footerLink:link{
@@ -400,26 +399,15 @@ cursor:pointer;
 }
 
 .copyright{
-margin-top:60px;
 font-family: 'Open Sans', sans-serif;
 font-size:12px;
 letter-spacing:2px;
 font-weight:300;
 }
 
-
-
 .footer{
-margin-top: 60px auto;
+margin-top: 60px auto 30px;
 }
-
-
-
-
-
-
-
-
 
 #form{
 font-family: 'Open Sans', sans-serif;
