Updated single.html to render different head.html depending on the page

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,8 @@
-{{ partial "head.html" . }}
+{{ if eq $.Params.title "Thank You, You're Confirmed in the Vibe Beta" }}
+    {{ partial "head2.html" . }}
+{{ else }}
+    {{ partial "head.html" . }}
+{{ end }}
 
 {{ partial "header.html" . }}
 
