--- a/layouts/partials/head2.html
+++ b/layouts/partials/head2.html
@@ -74,6 +74,36 @@
 		});
 	</script>
 
+	<!-- Facebook Pixel Code -->
+	<script>
+		! function (f, b, e, v, n, t, s) {
+			if (f.fbq) return;
+			n = f.fbq = function () {
+				n.callMethod ?
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+			};
+			if (!f._fbq) f._fbq = n;
+			n.push = n;
+			n.loaded = !0;
+			n.version = '2.0';
+			n.queue = [];
+			t = b.createElement(e);
+			t.async = !0;
+			t.src = v;
+			s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window,
+			document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '365893380475713'); // Insert your pixel ID here.
+		fbq('track', 'PageView');
+		fbq('track', 'Lead');
+	</script>
+
+	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"
+		/></noscript>
+	<!-- DO NOT MODIFY -->
+	<!-- End Facebook Pixel Code -->
+
 	<script type="text/javascript">
 		! function (e) {
 			if (!window.pintrk) {
@@ -92,7 +122,7 @@
 		pintrk('load', '2617160657516');
 		pintrk('page');
 	</script>
-	
+
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
 	</noscript>
@@ -100,7 +130,7 @@
 	<script>
 		pintrk('track', 'pagevisit');
 	</script>
-	
+
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
 		/>
