--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,3 +18,6 @@
             </div>
             <div class="copyright">Copyright &copy{{ .Site.Copyright }}</div>
         </div>
+
+    </body>
+</html>
