--- a/layouts/partials/vibe.html
+++ b/layouts/partials/vibe.html
@@ -1,7 +1,7 @@
 <div id="intro">
 		
 	<div class="introText">
-		Vibe is a tasting menu of premium cannabis, speciality coffee and craft chocolates. Each box is a collection of ingredients
+		Vibe is a tasting menu of premium cannabis, speciality coffee and craft chocolate. Each box is a collection of ingredients
 		for making moments in time. <br>
 		
 		<img class="accordionButton" src={{ "/img/vbutton.jpg" | relURL }}>
