Fixed account.html not rendering on live
Moved account.html to partials
Updated single.html to load account.html when specified
Updated name/email sizing

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,11 +4,14 @@
     {{ partial "head.html" . }}
 {{ end }}
 
-{{ partial "header.html" . }}
-
-<div class="heroD">
-    <div class="headerTextD">{{ .Title }}</div>
-    <div class="introTextD">{{ .Content }}</div>
-</div>
+{{ if eq $.Params.title "" }}
+    {{ partial "account.html" . }}
+{{ else }}
+    {{ partial "header.html" . }}
+    <div class="heroD">
+        <div class="headerTextD">{{ .Title }}</div>
+        <div class="introTextD">{{ .Content }}</div>
+    </div>
+{{ end }}
 
 {{ partial "footer.html" . }}
