--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -480,15 +480,19 @@ margin-top:60px;
 @media only screen and (max-width: 650px) {
 
     .account {
-        margin: 60px 20px 0;
+        margin: 60px 10px 0;
         display: flex;
         flex-direction: column;
     }
 
     .subscription {
-        margin: 60px 20px 60px;
+        margin: 60px 10px 60px;
         display: flex;
         flex-direction: column;
+    }
+    
+    .sidebar {
+        margin-bottom: 15px;
     }
 
     .subOptions {
