--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
 <div id="intro">
     
 <div class="introText">
-    Vibe is a tasting menu of premium cannabis, speciality coffee and craft chocolates. Each box is a collection of ingredients
+    Vibe delivers a tasting menu of premium cannabis, speciality coffee and craft chocolate every month. Each Vibe provision is a collection of ingredients
     for making moments in time. <br>
     
     <img class="accordionButton" src={{ "/img/vbutton.jpg" | relURL }}>
@@ -58,7 +58,7 @@
     <div class="triBlockCol1">
         <div class="number">1</div>
         <div class="triTitle">SELECTION</div>
-        <div class="triText">Choose your ideal provision. 2 of 3 products minimum. Mix, match and multiply. Cancel anytime.
+        <div class="triText">Choose your ideal provision. 2 of 3 products minimum.  Cancel anytime.
         </div>
     </div>
     <div class="triBlockCol2">
@@ -87,8 +87,8 @@
     <div class="whatBoxCol1"><img src={{ "/img/vcanna.jpg" | relURL }} class="pImg"></div>
     <div class="whatBoxCol2">
         <div class="whatTitle">CANNABIS</div>
-        <div class="whatText">Mostly pre-rolls and oils for vaping from flower grown on small farms in CA, OR, & WA. Plus special edible treats.
-            <BR> 1/8 oz equivalent / Lab Tested
+        <div class="whatText">Mostly oils for vaping and pre-rolls from flower grown on small farms in California. Plus special edible treats.
+            <BR> 1/8oz equivalent / Lab Tested
         </div>
     </div>
 </div>
@@ -125,7 +125,7 @@
         <img class="drop" src={{ "/img/vdrop.png" | relURL }}>
         <div class="plus">+</div><img class="books" src={{ "/img/vbooksicon.png" | relURL }}>
         <div class="triTitle">WATER + BOOKS</div>
-        <div class="triText">Fresh Drinking Water and Books for Origin communities</div>
+        <div class="triText">Every box funds fresh drinking water and school books for origin communities</div>
     </div>
     <div class="triBlockCol2">
         <img class="like" src={{ "/img/vlike.png" | relURL }}>
