--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
 <div id="intro">
     
 <div class="introText">
-    Vibe delivers a tasting menu of premium cannabis, speciality coffee and craft chocolate every month. Each Vibe provision is a collection of ingredients
+    Vibe delivers a tasting menu of premium cannabis, speciality coffee and craft chocolate every month. Each box is a collection of ingredients
     for making moments in time. <br>
     
     <img class="accordionButton" src={{ "/img/vbutton.jpg" | relURL }}>
@@ -86,7 +86,7 @@
 <div class="whatBoxRow">
     <div class="whatBoxCol1"><img src={{ "/img/vcanna.jpg" | relURL }} class="pImg"></div>
     <div class="whatBoxCol2">
-        <div class="whatTitle">CANNABIS</div>
+        <div class="whatTitle">PREMIUM CANNABIS</div>
         <div class="whatText">Mostly oils for vaping and pre-rolls from flower grown on small farms in California. Plus special edible treats.
             <BR> 1/8oz equivalent / Lab Tested
         </div>
@@ -96,8 +96,8 @@
 <div class="whatBoxRow">
     <div class="whatBoxCol1"><img src={{ "/img/vchocolate.jpg" | relURL }} class="pImg"></div>
     <div class="whatBoxCol2">
-        <div class="whatTitle">CHOCOLATE</div>
-        <div class="whatText">Alluring dark chocolates, expertly sourced and produced in small batches by master chocolatiers.
+        <div class="whatTitle">CRAFT CHOCOLATE</div>
+        <div class="whatText">Alluring dark chocolates, expertly sourced and produced in from bean to bar by master chocolatiers.
             <BR> 2 bars
         </div>
     </div>
@@ -106,8 +106,8 @@
 <div class="whatBoxRow">
     <div class="whatBoxCol1"><img src={{ "/img/vcoffee.jpg" | relURL }} class="pImg"></div>
     <div class="whatBoxCol2">
-        <div class="whatTitle">COFFEE</div>
-        <div class="whatText">Aromatic single origins and awaken your senses espresso blends, sourced and freshly roasted by the best.
+        <div class="whatTitle">SPECIALITY COFFEE</div>
+        <div class="whatText">Aromatic single origins and awaken your senses espresso blends, sourced and freshly roasted in small batches.
             <BR> 12oz Whole Beans
         </div>
     </div>
